--- a/implementation/client/views/layouts/default.ejs
+++ b/implementation/client/views/layouts/default.ejs
@@ -3,14 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_package/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_package/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_package/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_package/site.webmanifest">
+    <link rel="mask-icon" href="/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>Security Sandbox - <%= title %></title>
-    <link rel='stylesheet' href='/public/stylesheets/style.css' />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+
   </head>
   <body>
     <header>
-      
+
     </header>
     <main><%- body %></main>
     <footer></footer>
+    <script type="module" src="/javascripts/main.js" ></script>
   </body>
 </html>
