--- a/implementation/client/views/layouts/default.ejs
+++ b/implementation/client/views/layouts/default.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100" lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,17 +10,38 @@
     <link rel="mask-icon" href="/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <title>Security Sandbox - <%= title %></title>
+    <title>HACKLAB 101 - <%= title %></title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-
   </head>
-  <body>
-    <header>
-
-    </header>
-    <main><%- body %></main>
-    <footer></footer>
+  <body class="d-flex flex-column h-100">
+      <header>
+          <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">            
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/">HACKLAB 101</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" href="/blog">Blog</a>
+                  <a class="nav-link" href="/about">About</a>
+                  <a class="nav-link" href="/profile">Profile</a>
+                </div>
+              </div>      
+            </div>
+          </nav>
+      </header>
+    <main classs="flex-shrink-0">
+      <div class="container">
+        <%- body %>
+      </div>
+    </main>
+    <footer class="footer mt-auto py-2 bg-body-tertiary">
+      <div class="container">
+        <span class="text-body-secondary">&copy; 2024 - Lars Nysom</span>
+      </div>
+    </footer>
     <script type="module" src="/javascripts/main.js" ></script>
   </body>
 </html>
