--- a/implementation/client/views/layouts/default.ejs
+++ b/implementation/client/views/layouts/default.ejs
@@ -23,11 +23,16 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link" href="/blog">Blog</a>
-                  <a class="nav-link" href="/about">About</a>
-                  <a class="nav-link" href="/profile">Profile</a>
-                </div>
+                <ul class="navbar-nav me-auto">
+                  <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                  <li class="nav-item"><a class="nav-link disabled" href="/profile">Profile</a></li>
+                </ul>
+                <form class="d-flex" role="login">
+                  <input class="form-control me-2" type="text" placeholder="Username" />
+                  <input class="form-control me-2" type="password" placeholder="Password" />
+                  <button class="btn btn-outline-light" type="submit">Login</button>
+                </form>
               </div>      
             </div>
           </nav>
