Added sign up button

--- a/implementation/client/views/layouts/default.ejs
+++ b/implementation/client/views/layouts/default.ejs
@@ -31,8 +31,9 @@
                 <form class="d-flex" role="login">
                   <input class="form-control me-2" type="text" placeholder="Username" />
                   <input class="form-control me-2" type="password" placeholder="Password" />
-                  <button class="btn btn-outline-light" type="submit">Login</button>
+                  <button class="btn btn-outline-light me-2" type="submit">Login</button>
                 </form>
+                <button class="btn btn-outline-light" type="button">Sign up</button>
               </div>      
             </div>
           </nav>
